# bril

./: brili.ts
bril-ts/: bril.ts
bril-txt/: brilooptxt.py
briloop/briloop-txt/: brilooptxt.py  pyproject.toml
briloop/samples/: collatz.briloop  collatz.briloop.json  fib-iter.briloop  fib-iter.briloop.json  fib-recursive.briloop  fib-recursive.briloop.json
