[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "brilooptxt"
authors = [
    {
        name = "Adrian Sampson",
        email = "asampson@cs.cornell.edu",
    }, {
        name = "Gerardo Teruel",
        email = "gg525@cornell.edu",
    }
]
home-page = "https://github.com/sampsyo/bril"
requires-python = ">=3.4"
requires = [
    "lark-parser >=0.7.4",
]

[tool.flit.scripts]
briloop2txt = "briltxt:briloop2txt"
briloop2json = "briltxt:briloop2json"
